# wperf

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
.cargo/: mutants.toml
.githooks/: commit-msg  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  cross-kernel.yml  nightly.yml
benches/: cascade.rs  cascade_iai.rs
docs/decisions/: ADR-001.md  ADR-002-supplement.md  ADR-002.md  ADR-003.md  ADR-004-supplement.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  ADR-014.md  ADR-015.md  ADR-016.md  ADR-017.md  gamma-post-audit-spec.md
docs/design/: final-design.md
docs/gate0/: cascade-understanding.md  ebpf-prototype.md  gate0-signoff.md  origin-analysis.md  wprf-prototype.md
gate0/ebpf-proto/: Cargo.toml  build.rs
gate0/ebpf-proto/src/: main.rs  stress.rs
gate0/ebpf-proto/src/bpf/: probe.bpf.c  probe_rb.bpf.c
hooks/: check-git-identity.sh  dedup-trailers.sh  git-wrapper.sh  preflight-identity.sh  wrapper.bash  wrapper.fish
mutants.out/: caught.txt  lock.json  missed.txt  outcomes.json  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
scripts/: cascade_oracle.py  gamma1-selftest.sh  gamma1_filter_repo.py  sync-libbpf-compat.sh
src/: cli.rs  correlate.rs  dot.rs  lib.rs  main.rs  output.rs  pipeline.rs  record.rs  report.rs
tests/: bug_regressions.rs  differential.rs  figure4.rs  integration_tests.rs  p2b_io_fixtures.rs  probe_mixed_cascade.rs  property_tests.rs  snapshot_tests.rs
(+162 files in other folders)
