[package]
name = "wperf"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1.11"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow-list: low-signal pedantic lints that add noise without catching real bugs.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
return_self_not_must_use = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
