[package]
name = "ebpf-proto"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
libbpf-rs = "0.26"
libc = "0.2"
plain = "0.2"
nix = { version = "0.29", features = ["signal", "sched"] }

[[bin]]
name = "ebpf-proto"
path = "src/main.rs"

[[bin]]
name = "stress"
path = "src/stress.rs"

[build-dependencies]
libbpf-cargo = "0.26"
